--- a/Bookstore/Views/Book/Upsert.cshtml
+++ b/Bookstore/Views/Book/Upsert.cshtml
@@ -53,7 +53,7 @@
                     <div class="row col-4">
                         <div class="">
                             <button type="submit" class="btn btn-success form-control">Update</button>
-                            <a asp-controller="Book" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+                            <a asp-action="Delete" asp-controller="Book" asp-route-id="@Model.Id">Delete</a>
                         </div>
                     </div>
                 }
