--- a/Bookstore/Views/Book/Delete.cshtml
+++ b/Bookstore/Views/Book/Delete.cshtml
@@ -1,8 +1,27 @@
 ﻿@model Book
 
-<div class="text-center">
-    <h2>Are you sure want to delete book?</h2>
-    <form method="post" class="row" enctype="multipart/form-data">
-        <a asp-controller="Book" asp-action="Delete" asp-route-id="@Model">Delete</a>
-    </form>
+@{
+    ViewBag.Title = "Удаление пользователя";
+}
+ 
+<div>
+    <dl class="dl-horizontal">
+        <dt>Title</dt>
+        <dd>
+            @Html.DisplayFor(model => model.Title)
+        </dd>
+ 
+        <dt>Author</dt>
+        <dd>
+            @Html.DisplayFor(model => model.Author)
+        </dd>
+    </dl>
+ 
+    <div>
+        <form asp-controller="Book" asp-action="Delete" asp-route-bookId="Model.Id" method="post">
+            <div class="form-group">
+                <input type="submit" class="btn btn-default" value="Удалить" />
+            </div>
+        </form>
+    </div>
 </div>
