--- a/Bookstore/Views/Book/Delete.cshtml
+++ b/Bookstore/Views/Book/Delete.cshtml
@@ -1,27 +1,24 @@
 ﻿@model Book
 
-@{
-    ViewBag.Title = "Удаление пользователя";
-}
- 
-<div>
-    <dl class="dl-horizontal">
-        <dt>Title</dt>
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
- 
-        <dt>Author</dt>
-        <dd>
-            @Html.DisplayFor(model => model.Author)
-        </dd>
-    </dl>
- 
-    <div>
-        <form asp-controller="Book" asp-action="Delete" asp-route-bookId="Model.Id" method="post">
-            <div class="form-group">
-                <input type="submit" class="btn btn-default" value="Удалить" />
-            </div>
-        </form>
+
+<div class="container align-content-center justify-content-center align-items-center m-4 mt-5">
+    <div class="row mx-auto">
+        <div class="form-floating py-2 col-5 mt-xxl-4">
+            <input asp-for="@Model.Title" class="form-control border-0 shadow" />
+            <label asp-for="@Model.Title" class="ms-1 my-1 text-dark"></label>
+            <span asp-validation-for="@Model.Title" class="text-danger"></span>
+        </div>
+        <div class="form-floating py-2 col-5 mt-xxl-4">
+            <input asp-for="@Model.Author" class="form-control border-0 shadow" />
+            <label asp-for="@Model.Author" class="ms-1 my-1 text-dark"></label>
+            <span asp-validation-for="@Model.Author" class="text-danger"></span>
+        </div>
+        <div class="text-center">
+            <form asp-controller="Book" asp-action="Delete" asp-route-bookId="Model.Id" method="post">
+                <div class="form-group col-10 mt-4">
+                    <input type="submit" class="btn btn-danger" value="Delete" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
