add new category and delete category and update

--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -46,10 +46,10 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Log in</a>
                         </li>
                         <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
+                            <a class="nav-link text-warning" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
                         </li>
                         <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-warning" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
                     </ul>
                     <div>
