--- a/Bookstore/Views/Book/Delete.cshtml
+++ b/Bookstore/Views/Book/Delete.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Book
 
-
 <div class="container align-content-center justify-content-center align-items-center m-4 mt-5">
     <div class="row mx-auto">
         <div class="form-floating py-2 col-5 mt-xxl-4">
@@ -14,7 +13,7 @@
             <span asp-validation-for="@Model.Author" class="text-danger"></span>
         </div>
         <div class="text-center">
-            <form asp-controller="Book" asp-action="Delete" asp-route-bookId="Model.Id" method="post">
+            <form asp-controller="Book" asp-action="Delete" asp-route-bookId="@Model.Id" method="post">
                 <div class="form-group col-10 mt-4">
                     <input type="submit" class="btn btn-danger" value="Delete" />
                 </div>
