--- a/Bookstore/Views/Category/Index.cshtml
+++ b/Bookstore/Views/Category/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@model IEnumerable<Category>
-
-
-
+﻿@model List<Category>
 
 <div class="container mt-5">
 
@@ -22,8 +19,8 @@
             <table class="table table-hover table-bordered table-striped text-center">
                 <thead>
                     <tr>
-                        <th>Номер</th>
-                        <th>Название</th>
+                        <th>Nubmer</th>
+                        <th>Name</th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -36,16 +33,18 @@
                             <td>
                                 @category.Name
                             </td>
+                            <form method="post" enctype="multipart/form-data">
                             <td class="mx-auto">
                                 <a>
-                                    <a class="btn btn-success" asp-area="" asp-controller="Category" asp-action="Upsert">Edit</a>
+                                    <a class="btn btn-success" asp-controller="Category" asp-action="Upsert" asp-route-categoryId="@category.Id">Edit</a>
                                 </a>
                             </td>
                             <td class="mx-auto">
                                 <a>
-                                    <a class="btn btn-primary" asp-area="" asp-controller="" asp-action="Index">Show</a>
+                                    <a class="btn btn-primary" asp-area="" asp-controller="" asp-action="Index">Show</a> @*!!!*@
                                 </a>
                             </td>
+                            </form>
                         </tr>
                     }
                 </tbody>
