--- a/Bookstore/Views/Category/Upsert.cshtml
+++ b/Bookstore/Views/Category/Upsert.cshtml
@@ -1,12 +1,43 @@
 ﻿@model Category
 
 <div class="container">
-    @if (Model.Id != 0)
-    {
-        <h1>Edit</h1>
-    }
-    else
-    {
-        <h1>Add</h1>
-    }
+    <div>
+        @if (Model.Id != 0)
+        {
+            <h1>Edit</h1>
+        }
+        else
+        {
+            <h1>Add</h1>
+        }
+    </div>
+    <form method="post" enctype="multipart/form-data">
+        <div class="row">
+            <input asp-for="@Model.Id" hidden />
+            <div class="form-floating py-2 col-5 mt-xxl-4">
+                <input asp-for="@Model.Name" class="form-control border-0 shadow" />
+                <label asp-for="@Model.Name" class="ms-1 my-1 text-dark"></label>
+                <span asp-validation-for="@Model.Name" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="col-5 mt-xxl-4">
+            @if (Model.Id != 0)
+            {
+                <div class="row justify-content-center align-items-center">
+                    <div class="col text-center">
+                        <a class="btn btn-danger mb-1" asp-controller="Category" asp-action="Delete" asp-route-categoryId="@Model.Id">Delete</a>
+                    </div>
+                    <div class="col text-center">
+                        <button type="submit" class="btn btn-success form-control">Update</button>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <button type="submit" class="btn btn-success form-control">Create</button>
+            }
+        </div>
+    </form>
 </div>
+
+
