--- a/Bookstore/Views/Book/Index.cshtml
+++ b/Bookstore/Views/Book/Index.cshtml
@@ -7,31 +7,25 @@
 <div class="row pb-5 mb-5 pt-5">
     @foreach (var book in Model)
     {
-        <div class="col-lg-2 col-sm-2">
-            <div class="row p-2">
+        <div class="col-lg-3 col-sm-3">
+            <div class="row p-2" style="height: 100%">
                 <div class="col-12 p-1">
-                    <div href="https://www.labirint.ru/books/957428/" class="btn" role="button" aria-disabled="true">
-                        <div class="card card-deck border-0 p-3 shadow rounded">
-                            <img src="@book.ImageURL" class="card-img-top rounded" />
-                            <div class="card-body pb-0">
-                                <div class="pl-1">
-                                    <p class="card-title h6 text-black opacity-75 text-center"><b>@book.Title</b></p>
-                                </div>
-                            </div>
-                            <div class="card-body pb-0">
-                                <div class="pl-1">
-                                    <p class="card-title h7 text-dark opacity-75 text-center"><b>@book.Author</b></p>
-                                </div>
+                    <div class="card card-deck border-0 p-3 shadow rounded mx-auto h-100">
+                        <img src="@book.ImageURL" class="card-img-top rounded" />
+                        <div class="card-body h-100">
+                            <div class="pl-1">
+                                <p class="card-title h6 text-black opacity-75 text-center"><b>@book.Title</b></p>
                             </div>
                             <div class="pl-1">
-                                <div class="card-body">
-                                    <p class="text-dark text-opacity-75 text-center mb-0">@book.Price</p>
-                                </div>
+                                <p class="card-title h7 text-dark opacity-75 text-center"><b>@book.Author</b></p>
                             </div>
-                            <div>
+                            <div class="pl-1">
+                                <p class="text-dark text-opacity-75 text-center mb-0">@book.Price</p>
+                            </div>
+                            <div class="card-body align-self-end mt-auto">
                                 <a asp-controller="Book" asp-action="Upsert" asp-route-bookId="@book.Id" class="btn btn-dark border-0 form-control">
                                     Details
-                                </a>                                
+                                </a>
                             </div>
                         </div>
                     </div>
