--- a/Bookstore/Views/Book/Upsert.cshtml
+++ b/Bookstore/Views/Book/Upsert.cshtml
@@ -1,8 +1,8 @@
-﻿@model Book
+﻿@model BookVM
 
 <div class="container">
     <div class="text-center">
-        @if (Model.Id != 0)
+        @if (Model.Book.Id != 0)
         {
             <h2>Change the book</h2>
         }
@@ -11,61 +11,75 @@
             <h2>Add new Book</h2>
         }
     </div>
-</div>
-<div class="container">
-    <div class="row">
-        <form method="post" class="row" enctype="multipart/form-data">
-            <input asp-for="@Model.Id" hidden />
-            <div class="form-floating py-2 col-5 mt-xxl-4">
-                <input asp-for="@Model.Title" class="form-control border-0 shadow" />
-                <label asp-for="@Model.Title" class="ms-1 my-1 text-dark"></label>
-                <span asp-validation-for="@Model.Title" class="text-danger"></span>
-            </div>
-            <div class="form-floating py-2 col-5 mt-xxl-4">
-                <input asp-for="@Model.Author" class="form-control border-0 shadow" />
-                <label asp-for="@Model.Author" class="ms-1 my-1 text-dark"></label>
-                <span asp-validation-for="@Model.Author" class="text-danger"></span>
-            </div>
-            <div class="form-floating py-2 col-5 mt-xxl-4">
-                <input asp-for="@Model.ISBN" class="form-control border-0 shadow" />
-                <label asp-for="@Model.ISBN" class="ms-1 my-1 text-dark"></label>
-                <span asp-validation-for="@Model.ISBN" class="text-danger"></span>
-            </div>
-            <div class="form-floating py-2 col-5 mt-xxl-4">
-                <input asp-for="@Model.Price" class="form-control border-0 shadow" />
-                <label asp-for="@Model.Price" class="ms-1 my-1 text-dark"></label>
-                <span asp-validation-for="@Model.Price" class="text-danger"></span>
-            </div>
-            <div class="form-floating py-2 col-5 mt-xxl-4">
-                <input asp-for="@Model.Description" class="form-control border-0 shadow" />
-                <label asp-for="@Model.Description" class="ms-1 my-1 text-dark"></label>
-                <span asp-validation-for="@Model.Description" class="text-danger"></span>
-            </div>
-            <div class="form-floating py-2 col-5 mt-xxl-4">
-                <input asp-for="@Model.ImageURL" class="form-control border-0 shadow" />
-                <label asp-for="@Model.ImageURL" class="ms-1 my-1 text-dark"></label>
-                <span asp-validation-for="@Model.ImageURL" class="text-danger"></span>
-            </div>
-            <div class="col-6">
-                @if (Model.Id != 0)
-                {
-                    <div class="container mt-4">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="col text-center">
-                                <a class="btn btn-danger mb-1" asp-action="Delete" asp-controller="Book" asp-route-id="@Model.Id">Delete</a>
-                            </div>
-                            <div class="col text-center">
-                                <button type="submit" class="btn btn-success form-control">Update</button>
+
+    <div class="container">
+        <div class="row">
+            <form method="post" class="row" enctype="multipart/form-data">
+                <input asp-for="@Model.Book.Id" hidden />
+                <div class="form-floating py-2 col-5 mt-xxl-4">
+                    <input asp-for="@Model.Book.Title" class="form-control border-0 shadow" />
+                    <label asp-for="@Model.Book.Title" class="ms-1 my-1 text-dark"></label>
+                    <span asp-validation-for="@Model.Book.Title" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-5 mt-xxl-4">
+                    <input asp-for="@Model.Book.Author" class="form-control border-0 shadow" />
+                    <label asp-for="@Model.Book.Author" class="ms-1 my-1 text-dark"></label>
+                    <span asp-validation-for="@Model.Book.Author" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-5 mt-xxl-4">
+                    <input asp-for="@Model.Book.ISBN" class="form-control border-0 shadow" />
+                    <label asp-for="@Model.Book.ISBN" class="ms-1 my-1 text-dark"></label>
+                    <span asp-validation-for="@Model.Book.ISBN" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-5 mt-xxl-4">
+                    <input asp-for="@Model.Book.Price" class="form-control border-0 shadow" />
+                    <label asp-for="@Model.Book.Price" class="ms-1 my-1 text-dark"></label>
+                    <span asp-validation-for="@Model.Book.Price" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-5 mt-xxl-4">
+                    <input asp-for="@Model.Book.Description" class="form-control border-0 shadow" />
+                    <label asp-for="@Model.Book.Description" class="ms-1 my-1 text-dark"></label>
+                    <span asp-validation-for="@Model.Book.Description" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-5 mt-xxl-4">
+                    <input asp-for="@Model.Book.ImageURL" class="form-control border-0 shadow" />
+                    <label asp-for="@Model.Book.ImageURL" class="ms-1 my-1 text-dark"></label>
+                    <span asp-validation-for="@Model.Book.ImageURL" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-5 mt-xxl-4">
+                    <select asp-for="@Model.Book.Category" class="form-control border-0 shadow">
+                        <option value="">Выберите категорию</option>
+                        @foreach (var category in Model.CategoriesList)
+                        {
+                            <option value="@category.Id">@category.Name</option>
+                        }
+                    </select>
+                    <label asp-for="@Model.Book.Category" class="ms-1 my-1 text-dark"></label>
+                    <span asp-validation-for="@Model.Book.Category" class="text-danger"></span>
+                </div>
+
+                <div class="col-6">
+                    @if (Model.Book.Id != 0)
+                    {
+                        <div class="container mt-4">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col text-center">
+                                    <a class="btn btn-danger mb-1" asp-action="Delete" asp-controller="Book" asp-route-id="@Model.Book.Id">Delete</a>
+                                </div>
+                                <div class="col text-center">
+                                    <button type="submit" class="btn btn-success form-control">Update</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                }
-                else
-                {
-                    <button type="submit" class="btn btn-success form-control">Create</button>
-                }
-            </div>
-        </form>
+                    }
+                    else
+                    {
+                        <button type="submit" asp-action="Upsert" asp-route-bookVM="@Model" class="btn btn-success form-control">Create</button>
+                    }
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
+
+</div>
