--- a/Bookstore/Views/Category/Index.cshtml
+++ b/Bookstore/Views/Category/Index.cshtml
@@ -41,7 +41,7 @@
                             </td>
                             <td class="mx-auto">
                                 <a>
-                                    <a class="btn btn-primary" asp-area="" asp-controller="" asp-action="Index">Show</a> @*!!!*@
+                                    <a class="btn btn-primary" asp-area="" asp-controller="Category" asp-action="BookCategory" asp-route-categoryId="@category.Id">Show</a> @*!!!*@
                                 </a>
                             </td>
                             </form>
