--- a/Bookstore/Views/_ViewImports.cshtml
+++ b/Bookstore/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Bookstore
 @using Bookstore.Models
-@using Bookstore.DataAccess;
+@using Bookstore.DataAccess
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
