--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-4">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index"> Bookstore</a>
+                <a class="navbar-brand text-light" asp-controller="Home" asp-action="Index"> Bookstore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,10 +30,10 @@
 
                     <ul class="navbar-nav flex-grow-2">
                         <li>
-                            <a class="nav-link text-warning" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
+                            <a class="nav-link text-warning" asp-area="Admin" asp-controller="Book" asp-action="Index">Books</a>
                         </li>
                         <li>
-                            <a class="nav-link text-warning" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-warning" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -65,10 +65,10 @@
                             </a>
                         </li>
                         <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Registration</a>
+                            <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Registration">Registration</a>
                         </li>
                         <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Log in</a>
+                            <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="LogIn">Log in</a>
                         </li>
 
                     </ul>
