--- a/Bookstore/Areas/Identity/Views/User/LogIn.cshtml
+++ b/Bookstore/Areas/Identity/Views/User/LogIn.cshtml
@@ -1,5 +1,6 @@
 ﻿@model User
 
+
 <div class="container">
     <div class="row">
         <h1>LogIn</h1>
@@ -22,3 +23,13 @@
         </form>
     </div>
 </div>
+
+
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
+
+
+
