--- a/Bookstore/Areas/Identity/Views/User/Registration.cshtml
+++ b/Bookstore/Areas/Identity/Views/User/Registration.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model User
+﻿@model User
 
 <div class="container">
     <div class="row">
@@ -12,9 +11,9 @@
                     <span asp-validation-for="FirstName" class="text-danger"></span>
                 </div>
                 <div class="col-6">
-                    <label asp-for="SecondName" class="ms-1 my-1 text-dark"></label>
-                    <input asp-for="SecondName" class="form-control border-0 shadow" />
-                    <span asp-validation-for="SecondName" class="text-danger"></span>
+                    <label asp-for="LastName" class="ms-1 my-1 text-dark"></label>
+                    <input asp-for="LastName" class="form-control border-0 shadow" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
                 </div>
                 <div class="col-6">
                     <label asp-for="DateofBirth" class="ms-1 my-1 text-dark"></label>
