--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@inject IHttpContextAccessor HttpContextAccessor
+@{
+    var httpContext = HttpContextAccessor.HttpContext;
+}
+
+@inject ApplicationDbContext DB
+@{
+    var db = DB;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-4">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" asp-controller="Home" asp-action="Index"> Bookstore</a>
+                <a class="navbar-brand text-light" asp-area="Customer" asp-controller="Home" asp-action="Index"> Bookstore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,30 +58,46 @@
                         </li>
                     </ul>
 
-                    <ul class="navbar-nav flex-grow-1 justify-content-end">
+                    @if (httpContext.Session.GetInt32("Username") != null)
+                    {
+                        int? idUserFromHttpContext = httpContext.Session.GetInt32("Username");
 
-                        <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-chat-dots-fill"></i> Messages</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-person-circle"></i> Profile</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Wish List</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">
-                                <i class="bi bi-bag-check-fill"></i>Shopping Basket
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Registration">Registration</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="LogIn">Log in</a>
-                        </li>
+                        User user = db.User.FirstOrDefault(u => u.UserId == idUserFromHttpContext);
 
-                    </ul>
+                        if (user != null)
+                        {
+                            <ul class="navbar-nav flex-grow-1 justify-content-end">
+
+                                <li>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-chat-dots-fill"></i> Messages</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Profile"><i class="bi bi-person-circle"></i> Profile</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-bookmark-fill"></i>Wish List</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">
+                                        <i class="bi bi-bag-check-fill"></i>Shopping Basket
+                                    </a>
+                                </li>
+                            </ul>
+                        }
+                    }
+                    else
+                    {
+                        <ul class="navbar-nav flex-grow-1 justify-content-end">
+                            <li>
+                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Registration">Registration</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="LogIn">Log in</a>
+                            </li>
+
+                        </ul>
+                    }
+
                 </div>
             </div>
         </nav>
