--- a/Bookstore/Views/_ViewImports.cshtml
+++ b/Bookstore/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Bookstore
 @using Bookstore.Models
 @using Bookstore.DataAccess
+@using Bookstore.Areas.Customer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
