add change settings progile and setting route pages

--- a/Bookstore/Areas/Admin/Views/Book/Delete.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Delete.cshtml
@@ -4,14 +4,14 @@
 <div class="container align-content-center justify-content-center align-items-center m-4 mt-5">
     <div class="row mx-auto">
         <div class="form-floating py-2 col-5 mt-xxl-4">
-            <input asp-for="@Model.Title" class="form-control border-0 shadow" />
-            <label asp-for="@Model.Title" class="ms-1 my-1 text-dark"></label>
-            <span asp-validation-for="@Model.Title" class="text-danger"></span>
+            <input asp-for="Title" class="form-control border-0 shadow" />
+            <label asp-for="Title" class="ms-1 my-1 text-dark"></label>
+            <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="form-floating py-2 col-5 mt-xxl-4">
-            <input asp-for="@Model.Author" class="form-control border-0 shadow" />
-            <label asp-for="@Model.Author" class="ms-1 my-1 text-dark"></label>
-            <span asp-validation-for="@Model.Author" class="text-danger"></span>
+            <input asp-for="Author" class="form-control border-0 shadow" />
+            <label asp-for="Author" class="ms-1 my-1 text-dark"></label>
+            <span asp-validation-for="Author" class="text-danger"></span>
         </div>
         <div class="text-center">
             <div class="col text-center">
