--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Bookstore.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/mystyle.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/bookstorestyle.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -66,14 +66,7 @@
 
                         if (user != null)
                         {
-                            <ul class="navbar-nav flex-grow-1 justify-content-end">
-
-                                <li>
-                                    <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-chat-dots-fill"></i> Messages</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Profile"><i class="bi bi-person-circle"></i> Profile</a>
-                                </li>
+                            <ul class="navbar-nav flex-grow-1 justify-content-end">                                   
                                 <li>
                                     <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-bookmark-fill"></i>Wish List</a>
                                 </li>
@@ -81,6 +74,12 @@
                                     <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">
                                         <i class="bi bi-bag-check-fill"></i>Shopping Basket
                                     </a>
+                                </li>
+                                <li>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-chat-dots-fill"></i> Messages</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Profile"><i class="bi bi-person-circle"></i> @user.FirstName</a>
                                 </li>
                             </ul>
                         }
