--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                                     <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-bookmark-fill"></i>Wish List</a>
                                 </li>
                                 <li>
-                                    <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">
+                                    <a class="nav-link text-light" asp-area="Customer" asp-controller="ShoppingBasket" asp-action="Index" asp-route-bookId="null">
                                         <i class="bi bi-bag-check-fill"></i>Shopping Basket
                                     </a>
                                 </li>
